added comments and html and css validated

--- a/solution-hw2/css/styles.css
+++ b/solution-hw2/css/styles.css
@@ -182,6 +182,7 @@ body {
     background-color: yellow;
 }
 
+/* cart popup message styling */
 #cart-popup {
     position: absolute;
     top: 35px;
