--- a/solution-hw4/src/App.css
+++ b/solution-hw4/src/App.css
@@ -32,6 +32,15 @@ nav {
 
 .nav-item {
   text-decoration: none;
+  position: relative;
+  display: block;
+}
+
+.cart-info {
+  display: block;
+  font-size: 0.8em;
+  text-align: center;
+  margin-top: 5px;
 }
 
 .nav-item.current a {
@@ -39,7 +48,7 @@ nav {
   font-weight: 750;
 }
 
-.nav-item:hover {
+.nav-item a:hover {
   background-color: yellow;
 }
 
@@ -108,6 +117,8 @@ body {
 
 .price p {
   font-size: 1.5em;
+  width: 7px;
+
 }
 
 /* right column product styling */
