copied over solution hw-3

--- a/solution-hw4/src/App.css
+++ b/solution-hw4/src/App.css
@@ -32,33 +32,6 @@ nav {
 
 .nav-item {
   text-decoration: none;
-  position: relative;
-  display: block;
-}
-
-.cart-info {
-  display: block;
-  font-size: 0.8em;
-  text-align: center;
-  margin-top: 5px;
-}
-
-.cart-popup {
-  position: absolute;
-  top: 65px;
-  left: 0;
-  background-color: white;
-  border: 1px solid #333;
-  padding: 10px;
-  width: 150px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 1;
-  font-size: 0.8em;
-}
-
-.cart-popup p {
-  margin: 2px 0;
-  line-height: 1.2;
 }
 
 .nav-item.current a {
@@ -66,7 +39,7 @@ nav {
   font-weight: 750;
 }
 
-.nav-item a:hover {
+.nav-item:hover {
   background-color: yellow;
 }
 
@@ -135,8 +108,6 @@ body {
 
 .price p {
   font-size: 1.5em;
-  width: 7px;
-
 }
 
 /* right column product styling */
@@ -204,3 +175,4 @@ body {
 .cart-button button:hover {
   background-color: yellow;
 }
+
