--- a/solution-hw4/src/App.css
+++ b/solution-hw4/src/App.css
@@ -32,6 +32,33 @@ nav {
 
 .nav-item {
   text-decoration: none;
+  position: relative;
+  display: block;
+}
+
+.cart-info {
+  display: block;
+  font-size: 0.8em;
+  text-align: center;
+  margin-top: 5px;
+}
+
+.cart-popup {
+  position: absolute;
+  top: 65px;
+  left: 0;
+  background-color: white;
+  border: 1px solid #333;
+  padding: 10px;
+  width: 150px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  font-size: 0.8em;
+}
+
+.cart-popup p {
+  margin: 2px 0;
+  line-height: 1.2;
 }
 
 .nav-item.current a {
@@ -39,7 +66,7 @@ nav {
   font-weight: 750;
 }
 
-.nav-item:hover {
+.nav-item a:hover {
   background-color: yellow;
 }
 
@@ -108,6 +135,8 @@ body {
 
 .price p {
   font-size: 1.5em;
+  width: 7px;
+
 }
 
 /* right column product styling */
