--- a/hw5/src/App.css
+++ b/hw5/src/App.css
@@ -36,13 +36,6 @@ nav {
   display: block;
 }
 
-.cart-info {
-  display: block;
-  font-size: 0.8em;
-  text-align: center;
-  margin-top: 5px;
-}
-
 .cart-popup {
   position: absolute;
   top: 65px;
@@ -73,6 +66,48 @@ nav {
 .site-logo img{
   width: 400px;
 }
+
+/* view cart */
+.cart-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.cart-total {
+  text-align: right;
+}
+
+.cart-container {
+  margin-left: 150px;
+  border-top: solid 5px #7B6666;
+  border-bottom: solid 5px #7B6666;
+  margin-bottom: 30px;
+}
+
+.cart-items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+
+.cart-item-image {
+  width: 150px;
+  height: auto;
+  margin-right: 10px;
+}
+
+.cart-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  text-align: center;
+}
+
 
 /* header styling */
 header h1 {
