--- a/hw5/src/App.css
+++ b/hw5/src/App.css
@@ -108,6 +108,11 @@ nav {
   text-align: center;
 }
 
+#empty-cart {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
 
 /* header styling */
 header h1 {
